--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
 matplotlib==3.4.3
-numpy==1.21.2
+numpy==1.23.1
 pandas==1.3.3
 scikit-learn==1.0
-statsmodels==0.13.0
+statsmodels==0.13.2
+seaborn==0.11.2
+jupyterlab==3.1.14
+pytest==6.2.5
+testbook==0.4.2
+mlflow==1.20.2
+parsenvy==3.0.2
+black==21.9b0
+protobuf==3.20.1
+pyarrow==10.0.1
+fastparquet==0.8.3
+FilePath==0.1
+polars==0.15.16
+gensim==4.3.0
